--- a/.github/workflows/HTML-Validation.yml
+++ b/.github/workflows/HTML-Validation.yml
@@ -1,6 +1,12 @@
 name: Validate HTML Files
 
-on: [push, pull_request]
+on:
+  push:
+    paths-ignore:
+      - '.github/**'
+  pull_request:
+    paths-ignore:
+      - '.github/**'
 
 permissions:
   contents: read
