Fix quotation style in workflow YAML files for consistency

--- a/.github/workflows/auto-update-stats-tables.yml
+++ b/.github/workflows/auto-update-stats-tables.yml
@@ -3,7 +3,7 @@ name: Auto Update Stats Tables
 on:
   push:
     paths:
-      - 'database.json'
+      - "database.json"
 
 permissions:
   contents: write
