--- a/.github/workflows/auto-update-stats-tables.yml
+++ b/.github/workflows/auto-update-stats-tables.yml
@@ -61,8 +61,8 @@ jobs:
           done
       - name: Commit and push changes if any
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           if ! git diff --quiet; then
             git add .
             git commit -m "🔄 Auto-update Markdown tables from database.json"
